--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por <a href="https://gustavoguanabara.github.io/" target="_blank">Gustavo Guanabara</a> para o CursoemVideo.</p>
+        <p>Site criado por <a href="https://github.com/danielhcoutinho" target="_blank">Daniel Coutinho</a> para o CursoemVideo.</p>
     </footer>
 </body>
 </html>
-  
+    
